Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/Distributor_Dealer__c.object-meta.xml
<CustomObject>
    <label>Distributor/Dealer(O)</label>
    <nameField>
        <label>Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors/Dealers(O)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>