Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Address_Report__c.field-meta.xml
<CustomField>
    <fullName>Address_Report__c</fullName>
    <formula>Contact_Person__c + BR() +
 Name + BR() +
 Address__c + BR() +
 City__c + BR() +
 TEXT(State__c) + BR() +
 Pin_Code__c + BR() +
 Mobile__c + BR() +
 Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Report</label>
    <type>Text</type>
</CustomField>