Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Any_Branding_Required__c.field-meta.xml
<CustomField>
    <fullName>Any_Branding_Required__c</fullName>
    <label>Any Branding Required</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_Branding_Done__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Only Outside Required</fullName>
            </value>
            <value>
                <fullName>Full Shop Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>