Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Approx_Size_of_shop_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Approx_Size_of_shop_in_Sq_ft__c</fullName>
    <label>Approx Size of shop (in Sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>