Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Birthday_Today__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Today__c</fullName>
    <formula>IF(AND((Month(Birthdate__c)=Month(Today())),(DAY(Birthdate__c)=Day(Today()))), &apos;Yes&apos;,&apos;No&apos;)</formula>
    <label>Birthday Today</label>
    <type>Text</type>
</CustomField>