Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Birthday_Tomorrow__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Tomorrow__c</fullName>
    <formula>IF(AND((Month(Birthdate__c)=Month(Today()+1)),(DAY(Birthdate__c)=Day(Today()+1))), &apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Tomorrow</label>
    <type>Text</type>
</CustomField>