Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Outshop</fullName>
            </value>
            <value>
                <fullName>Vehicle Branding</fullName>
            </value>
            <value>
                <fullName>No Branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>