Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Branding_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Branding_Remarks__c</fullName>
    <label>Branding Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>