Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Competitor_Party__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Party__c</fullName>
    <label>Competitor Party</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>