Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Contact_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_1__c</fullName>
    <label>Contact Email 1</label>
    <type>Email</type>
</CustomField>