Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Contact_Number_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Phone_1__c</fullName>
    <label>Contact Number (Phone) 1</label>
    <type>Phone</type>
</CustomField>