Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Contact_Number_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Phone__c</fullName>
    <label>Contact Number (Phone)</label>
    <type>Phone</type>
</CustomField>