Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Conversion_Probability__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Probability__c</fullName>
    <label>Conversion Probability</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>