Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Current_Branding_Detail__c.field-meta.xml
<CustomField>
    <fullName>Current_Branding_Detail__c</fullName>
    <label>Current Branding Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Only Outside</fullName>
            </value>
            <value>
                <fullName>Full Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>