Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Dealer_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Flag__c</fullName>
    <formula>IF( ISPICKVAL(Type__c,&apos;Distributor&apos;), 0, 1)</formula>
    <label>Dealer Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>