Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>Discount Received from Distributor</inlineHelpText>
    <label>Discount (%)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>