Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Display_of_our_product__c.field-meta.xml
<CustomField>
    <fullName>Display_of_our_product__c</fullName>
    <label>Display of our product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prominent</fullName>
            </value>
            <value>
                <fullName>Not Prominent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>