Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Full_Shop_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Shop_Required__c</fullName>
    <label>Full Shop Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>