Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Give_Reason__c.field-meta.xml
<CustomField>
    <fullName>Give_Reason__c</fullName>
    <inlineHelpText>Specify reason for why Branding required or why not required..</inlineHelpText>
    <label>Give Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Any_Branding_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Good Location</fullName>
            </value>
            <value>
                <fullName>Good Visibility</fullName>
            </value>
            <value>
                <fullName>Good Sales</fullName>
            </value>
            <value>
                <fullName>Good Dealer</fullName>
            </value>
            <value>
                <fullName>Less Sales</fullName>
            </value>
            <value>
                <fullName>Poor Visibility</fullName>
            </value>
            <value>
                <fullName>Not Our Dealer</fullName>
            </value>
            <value>
                <fullName>No Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>