Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/If_Yes_Products__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Products__c</fullName>
    <label>If Yes,Products</label>
    <type>TextArea</type>
</CustomField>