Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Is_Branding_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Branding_Done__c</fullName>
    <label>Is Branding Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Only Outside</fullName>
            </value>
            <value>
                <fullName>Full Shop</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>