Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branding__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Oneway vision / Glass branding</fullName>
            </value>
            <value>
                <fullName>Sunboard</fullName>
            </value>
            <value>
                <fullName>Glow Sign Board</fullName>
            </value>
            <value>
                <fullName>Flex Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>