Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/No_of_Salesmen__c.field-meta.xml
<CustomField>
    <fullName>No_of_Salesmen__c</fullName>
    <label>No of Salesmen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>