Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Other_products_brands_sold__c.field-meta.xml
<CustomField>
    <fullName>Other_products_brands_sold__c</fullName>
    <inlineHelpText>Brand Name - Product Line</inlineHelpText>
    <label>Other products/brands sold</label>
    <type>TextArea</type>
</CustomField>