Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Owner_id__c.field-meta.xml
<CustomField>
    <fullName>Owner_id__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner id</label>
    <type>Text</type>
</CustomField>