Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Parent_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Parent_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required if selected type is Dealer</inlineHelpText>
    <label>Parent Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <filterItems>
            <field>Distributor_Dealer__c.Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>Distributor_Dealer__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipName>Distributors_Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>