Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Parent_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Distributor_Name__c</fullName>
    <formula>Parent_Distributor__r.Name</formula>
    <label>Parent Distributor Name</label>
    <type>Text</type>
</CustomField>