Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Parent_Standard_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Parent_Standard_Distributor__c</fullName>
    <formula>Parent_Distributor__r.Standard_Account_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Standard Distributor</label>
    <type>Text</type>
</CustomField>