Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Parent_Standard_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Standard_Distributor_Name__c</fullName>
    <formula>Parent_Distributor__r.Standard_Account_Link__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Standard Distributor Name</label>
    <type>Text</type>
</CustomField>