Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aqua Life</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>