Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Purchase_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Cycle__c</fullName>
    <label>Purchase Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>