Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Repeat_Visit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Visit_Flag__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeat Visit Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>