Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Standard_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Standard_Account_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Account Link</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Distributors_Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>