Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>