Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Type__c</fullName>
    <formula>IF(LastModifiedDate =  CreatedDate, &apos;New&apos;, IF(LastModifiedDate &lt; (Now()-30), &apos;Existing&apos;, &apos;Converted&apos;))</formula>
    <label>Status Type</label>
    <type>Text</type>
</CustomField>