Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/TIN_No__c.field-meta.xml
<CustomField>
    <fullName>TIN_No__c</fullName>
    <label>TIN No.</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>