Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Tomorrow_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Tomorrow_Anniversary__c</fullName>
    <formula>IF(AND((Month(Anniversary_Date__c)=Month(Today()+1)),(DAY(Anniversary_Date__c)=Day(Today()+1))), &apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tomorrow Anniversary</label>
    <type>Text</type>
</CustomField>