Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>Owner:User.LastName</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>