Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/VAT_CST_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_CST_Number__c</fullName>
    <label>VAT/CST Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>