Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/fields/Year_Since_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Year_Since_in_Business__c</fullName>
    <label>Year Since in Business</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>