Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/Anniversary_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Anniversary_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Anniversary_Date__c &gt;= Today()</errorConditionFormula>
    <errorDisplayField>Anniversary_Date__c</errorDisplayField>
    <errorMessage>Invalid Anniversary Date</errorMessage>
</ValidationRule>