Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/Birthdate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Birthdate__c  &gt;= Today()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Invalid Birthdate</errorMessage>
</ValidationRule>