Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/Distributor_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Phone_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Distributor&apos;) &amp;&amp; ISBLANK(Phone__c)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter Distributor Phone Number</errorMessage>
</ValidationRule>