Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/For_Dealer_Parent_Distributor_Is_Must.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Dealer_Parent_Distributor_Is_Must</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Dealer&apos;) &amp;&amp;  ISBLANK( Parent_Distributor__c ) &amp;&amp; ISPICKVAL( Status__c, &apos;Existing&apos;)</errorConditionFormula>
    <errorDisplayField>Parent_Distributor__c</errorDisplayField>
    <errorMessage>Parent Distributor is required for Existing Dealer</errorMessage>
</ValidationRule>