Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR (BEGINS(Mobile__c,&apos;0&apos;), BEGINS(Mobile__c,&apos;+91&apos;), LEN(Mobile__c) &lt;&gt; 10, NOT(REGEX(Mobile__c, &quot;[0-9]{10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Do not start with &quot;Zero&quot; or &quot;+91&quot;. Don&apos;t give any blank space in between. Please enter only 10 digit mobile number.</errorMessage>
</ValidationRule>