Partial_14Dec2021/force-app/main/default/objects/Distributor_Dealer__c/validationRules/Pincode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Type__c,&apos;Distributor&apos;), NOT(ISBLANK(Pin_Code__c))), OR(BEGINS(Pin_Code__c ,&apos;0&apos;), LEN(Pin_Code__c ) &lt;&gt; 6, NOT(REGEX( Pin_Code__c , &quot;[0-9]{6}&quot;))))</errorConditionFormula>
    <errorDisplayField>Pin_Code__c</errorDisplayField>
    <errorMessage>Please enter only 6 digits for Pincode</errorMessage>
</ValidationRule>